k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: airline
  labels:
    name: airline
