k8s/03-booking-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: airline
  labels:
    app: booking-service
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0   # zero-downtime deploy
  template:
    metadata:
      labels:
        app: booking-service
        version: v1
    spec:
      containers:
      - name: booking-service
        image: airline/booking-service:latest
        imagePullPolicy: Never        # dùng local image (minikube/docker-desktop)
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: airline
spec:
  selector:
    app: booking-service
  ports:
  - name: http
    port: 3001
    targetPort: 3001
