k8s/05-search-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
  namespace: airline
spec:
  replicas: 3           # search thường có traffic cao nhất
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
      - name: search-service
        image: airline/search-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3003
        readinessProbe:
          httpGet:
            path: /health
            port: 3003
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 3003
          initialDelaySeconds: 40
          periodSeconds: 30
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: airline
spec:
  selector:
    app: search-service
  ports:
  - port: 3003
    targetPort: 3003
